checker/tests/nullness/init/Uninit.java
public class Uninit {
  // :: error: (initialization.field.uninitialized)
  Object a;
}
